; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/xen-netback/extr_hash.c_xenvif_new_hash.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/xen-netback/extr_hash.c_xenvif_new_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xenvif = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@xenvif_hash_cache_size = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xenvif*, i32*, i32)* @xenvif_new_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xenvif_new_hash(%struct.xenvif* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.xenvif*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.xenvif* %0, %struct.xenvif** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.xenvif*, %struct.xenvif** %4, align 8
  %9 = getelementptr inbounds %struct.xenvif, %struct.xenvif* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @xen_netif_toeplitz_hash(i32 %11, i32 4, i32* %12, i32 %13)
  store i32 %14, i32* %7, align 4
  %15 = load i64, i64* @xenvif_hash_cache_size, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %3
  %18 = load %struct.xenvif*, %struct.xenvif** %4, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @xenvif_add_hash(%struct.xenvif* %18, i32* %19, i32 %20, i32 %21)
  br label %23

23:                                               ; preds = %17, %3
  %24 = load i32, i32* %7, align 4
  ret i32 %24
}

declare dso_local i32 @xen_netif_toeplitz_hash(i32, i32, i32*, i32) #1

declare dso_local i32 @xenvif_add_hash(%struct.xenvif*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
